[project]
name = "cloud_enum"
version = "0.8"
description = "Multi-cloud OSINT tool. Enumerate public resources in AWS, Azure, and Google Cloud."
requires-python = ">=3.10"
dependencies = [
    "dnspython>=2.8.0",
    "requests>=2.34.2",
    "requests-futures>=1.0.2",
]

[project.scripts]
cloud_enum = "cloud_enum:main"

[dependency-groups]
dev = [
    "pytest",
]

[tool.setuptools]
py-modules = ["cloud_enum"]
packages = ["enum_tools"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
